Add 3D-representation with SDF-format on performance detail page

--- a/src/DSSCDB/static/DSSCDB/css/image_viewer.css
+++ b/src/DSSCDB/static/DSSCDB/css/image_viewer.css
@@ -37,3 +37,11 @@
   z-index: 1000;
   -webkit-font-smoothing: antialiased;
 }
+
+.img-thumbnail {
+    border: none;
+}
+
+td {
+    word-break: break-all;
+}
