--- a/src/DSSCDB/templates/DSSCDB/base.html
+++ b/src/DSSCDB/templates/DSSCDB/base.html
@@ -13,6 +13,7 @@
   <link href="{% static 'DSSCDB/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'DSSCDB/css/base.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'DSSCDB/css/spinner.css' %}" rel="stylesheet" type="text/css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/IBM-type/0.5.3/css/ibm-type.min.css" rel="stylesheet">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="{% static 'DSSCDB/javascript/bootstrap.min.js' %}" defer></script>
   {% block styles %}
