Add Batch download view, url and link in menu

--- a/src/DSSCDB/templates/DSSCDB/index.html
+++ b/src/DSSCDB/templates/DSSCDB/index.html
@@ -6,7 +6,7 @@ Dye Sensitized Solar Cell Database
     <div class="container">
       <h2 class="display-3">Dye Sensitized Solar Cell Database</h2>
       <p>Welcome to DSSC database! A comprehensive collection of solar efficiencies</p>
-      <p><a href="{% url 'user:signup' %}" role="button">Sign up</a> and <a href="{% url 'user:login' %}">log in</a> to browse the database
+      <p><a href="{% url 'user:signup' %}" role="button">Sign up</a> and <a href="{% url 'user:login' %}">log in</a> to contribute to the database
       </p>
     </div>
   </div>
@@ -24,7 +24,7 @@ Dye Sensitized Solar Cell Database
               electrolyte and counter electrodes impact both the efficiency and stability of DSSCs.
             </p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-3">
             <h2>Efficencies</h2>
             <img src="{% static 'DSSCDB/images/dye_plots.png' %}" class="img-responsive">
           </div>
