--- a/src/dye/templates/dye/performance_detail.html
+++ b/src/dye/templates/dye/performance_detail.html
@@ -45,7 +45,6 @@
                 </div>
                 <div class="panel-body">
 
-
                   <div>
                     <!-- Nav tabs -->
                     <ul class="nav nav-tabs">
@@ -92,11 +91,11 @@
                   <tbody>
                   <tr>
                     <th>InChI</th>
-                    <td>{{ performance.molecule.inchi }}</td>
+                    <td style="word-break: break-all;">{{ performance.molecule.inchi }}</td>
                   </tr>
                   <tr>
                     <th>SMILES</th>
-                    <td>{{ performance.molecule.smiles }}</td>
+                    <td style="word-break: break-all;">{{ performance.molecule.smiles }}</td>
                   </tr>
                   </tbody>
                 </table>
