Change wording for menu items

--- a/src/DSSCDB/templates/DSSCDB/menu.html
+++ b/src/DSSCDB/templates/DSSCDB/menu.html
@@ -27,8 +27,8 @@
           <img class="menu-icon" src="{% static "DSSCDB/images/ic_list_white_24px.svg" %}">
           Browse <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="{% url 'dye:performance-search' %}">Browse</a></li>
-          <li><a href="{% url 'dye:batch-download' %}">Batch download</a></li>
+          <li><a href="{% url 'dye:performance-search' %}">Search</a></li>
+          <li><a href="{% url 'dye:batch-download' %}">Download</a></li>
         </ul>
       </li>
 
